--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="calculator">
     <div class="display">
-      <div class="display-history">10 +</div> 
-      <div class="display-current">9</div> 
+      <div class="display-history"></div> 
+      <div class="display-current">0</div> 
     </div>
     <div class="button-grids">
       <!-- first row -->
@@ -29,11 +29,11 @@
       <button class="number">1</button>
       <button class="number">2</button>
       <button class="number">3</button>
-      <button class="operator subtract">−</button>
+      <button class="operator subtract">-</button>
       <!-- fifth row -->
       <button class="number">.</button>
       <button class="number">0</button>
-      <button class="operator equals">=</button>
+      <button class="equals">=</button>
       <button class="operator add">+</button>
     </div>
   </div>
